--- a/README
+++ b/README
@@ -6,3 +6,4 @@
 - defecte boiler
 - stroom scrabbling attacks on my pc-screen
 - overlast aan de deur door nachtzwervers
+- centimeter dust dump attack in the bathroom
