--- a/README
+++ b/README
@@ -7,7 +7,9 @@
 
 - afsluiting centrake verwarming
 - defecte boiler
+- nieuwe waterkoker door gebruik van de stroomnet defect
 - stroom scrabbling attacks on my pc-screen
 - overlast aan de deur door nachtzwervers
 - centimeter dust dump attack in the bathroom
+- buren met klopboorhamer in de nacht
 - overlast gevende ongevraagde kanker colletes aan de deur
